fix(css): vertical-alignment was removed during upgrade to new font generator.

--- a/fonts/Bullhorn-Glyphicons.css
+++ b/fonts/Bullhorn-Glyphicons.css
@@ -17,6 +17,7 @@ i[class^="bhi-"]:before, i[class*=" bhi-"]:before {
     text-transform: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    vertical-align: middle;
 }
 
 .bhi-activity:before {
